# Advent-of-Code-2025

./: .gitignore  CMakeLists.txt  run
src/: CMakeLists.txt
src/common/: CMakeLists.txt  common.cpp  common.hpp
src/day01/: CMakeLists.txt  solve.cpp
src/day01/part1/: part1.cpp  part1.hpp
src/day01/part2/: part2.cpp  part2.hpp
src/day02/day01/: CMakeLists.txt  solve.cpp
src/day02/day01/part2/: part2.cpp
src/day02/part1/: part1.cpp  part1.hpp
src/day02/part2/: part2.cpp  part2.hpp
src/day03/day01/: CMakeLists.txt  solve.cpp
src/day03/day01/part1/: part1.cpp
src/day03/day01/part2/: part2.cpp
src/day03/part1/: part1.cpp  part1.hpp
src/day03/part2/: part2.cpp  part2.hpp
src/day04/: CMakeLists.txt  solve.cpp
src/day04/day01/part1/: part1.cpp
src/day04/day01/part2/: part2.cpp  part2.hpp
src/day04/part1/: part1.cpp  part1.hpp
src/day04/part2/: part2.cpp
src/day05/: CMakeLists.txt
src/day05/day01/: solve.cpp
src/day05/day01/part1/: part1.hpp
src/day05/day01/part2/: part2.cpp
src/day05/part1/: part1.cpp
src/day05/part2/: part2.cpp  part2.hpp
src/day06/: CMakeLists.txt
src/day06/day01/: solve.cpp
src/day06/day01/part1/: part1.cpp  part1.hpp
src/day06/day01/part2/: part2.hpp
src/day06/part1/: part1.cpp
src/day06/part2/: part2.cpp
src/day07/: CMakeLists.txt
src/day07/day01/: solve.cpp
src/day07/day01/part1/: part1.cpp  part1.hpp
src/day07/day01/part2/: part2.cpp
src/day07/part1/: part1.cpp
src/day07/part2/: part2.cpp  part2.hpp
src/day08/: CMakeLists.txt
src/day08/day01/: solve.cpp
src/day08/day01/part1/: part1.cpp  part1.hpp
src/day08/day01/part2/: part2.hpp
src/day08/part1/: part1.cpp
src/day08/part2/: part2.cpp
src/day09/: CMakeLists.txt
src/day09/day01/: solve.cpp
src/day09/day01/part1/: part1.cpp  part1.hpp
src/day09/day01/part2/: part2.cpp
src/day09/part1/: part1.cpp
src/day09/part2/: intersection.cpp  intersection.hpp  part2.cpp  part2.hpp  polygon.cpp  polygon.hpp  windingNumberAlgo.cpp  windingNumberAlgo.hpp
src/day10/: CMakeLists.txt  solve.cpp
src/day10/day01/part1/: part1.cpp
src/day10/day01/part2/: part2.hpp
src/day10/part1/: part1.cpp  part1.hpp
src/day10/part2/: part2.cpp
src/day11/: CMakeLists.txt  solve.cpp
src/day11/day01/part1/: part1.cpp  part1.hpp
src/day11/part2/: part2.cpp  part2.hpp
src/day12/: solve.cpp
src/day12/day01/: CMakeLists.txt
src/day12/day01/part2/: part2.cpp  part2.hpp
src/day12/part1/: part1.cpp  part1.hpp
